Title positioning on mobile fixed

--- a/style.css
+++ b/style.css
@@ -23,4 +23,5 @@ footer {
 
 .titletext {
     padding-left: 6%;
+    display: inline-block;
 }
